--- a/laivanupotus/src/main/java/com/antero/laivanupotus/kayttoliittyma/Kayttoliittyma.form
+++ b/laivanupotus/src/main/java/com/antero/laivanupotus/kayttoliittyma/Kayttoliittyma.form
@@ -74,18 +74,28 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="91" max="-2" attributes="0"/>
-              <Component id="tervetuloaLabel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="309" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <EmptySpace min="-2" pref="91" max="-2" attributes="0"/>
+                      <Component id="tervetuloaLabel" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
+                      <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
+                  </Group>
+              </Group>
+              <EmptySpace pref="67" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="93" max="-2" attributes="0"/>
+              <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="tervetuloaLabel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="249" max="32767" attributes="0"/>
+              <EmptySpace pref="51" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -93,5 +103,153 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="tervetuloaLabel">
     </Component>
+    <Container class="javax.swing.JPanel" name="jPanel1">
+
+      <Layout>
+        <DimensionLayout dim="0">
+          <Group type="103" groupAlignment="0" attributes="0">
+              <Group type="102" attributes="0">
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="l00" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="l10" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="l20" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="l30" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="l40" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="l50" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="l60" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="l70" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="l80" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="l90" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="l01" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="l11" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="l02" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="l12" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <EmptySpace pref="15" max="32767" attributes="0"/>
+              </Group>
+          </Group>
+        </DimensionLayout>
+        <DimensionLayout dim="1">
+          <Group type="103" groupAlignment="0" attributes="0">
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="l00" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="l10" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="l20" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="l30" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="l40" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="l50" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="l60" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="l70" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="l80" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="l90" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="l01" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="l11" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="l02" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="l12" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace pref="39" max="32767" attributes="0"/>
+              </Group>
+          </Group>
+        </DimensionLayout>
+      </Layout>
+      <SubComponents>
+        <Component class="javax.swing.JLabel" name="l00">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="l00"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="l10">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="l10"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="l20">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="l20"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="l30">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="l30"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="l40">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="l40"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="l50">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="l50"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="l60">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="l60"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="l70">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="l70"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="l80">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="l80"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="l01">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="l01"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="l90">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="l90"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="l02">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="l02"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="l11">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="l11"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="l12">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="l12"/>
+          </Properties>
+        </Component>
+      </SubComponents>
+    </Container>
   </SubComponents>
 </Form>
